# LLMAnalyze

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
src/application/services/: analysis_service.py  news_service.py
src/core/: config.py  exceptions.py
src/core/domain/: enums.py  events.py  models.py
src/core/interfaces/: cache.py  llm_provider.py  market_data.py  news_aggregator.py  news_provider.py  notifier.py  repository.py  technical_analyzer.py
src/infrastructure/analysis/: ta_engine.py
src/infrastructure/llm/: factory.py  gemini_provider.py  mock_provider.py  openai_provider.py  prompts.py
src/infrastructure/market_data/: borsapy_provider.py  yahoo_provider.py
src/infrastructure/news/: news_aggregator.py  newsapi_provider.py  rss_provider.py
src/presentation/api/: dependencies.py  main.py  schemas.py
src/presentation/api/routes/: analysis.py  news.py
tests/unit/: test_mock_provider.py  test_models.py  test_news_aggregator.py  test_news_service.py  test_rss_provider.py  test_ta_engine.py
